--- a/src/public/css/style.styl
+++ b/src/public/css/style.styl
@@ -1,6 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700)
 
-
 gradient(a, b)
     background: a
     background: -moz-linear-gradient(top, a 0%, b 100%)
@@ -260,7 +259,13 @@ article.callout
         color: #FFF
         font-weight: 400
         font-size: 18px
-        padding: 12px 10px
+        padding: 0
+        
+        a
+            padding: 12px 10px
+            display: block
+            color: #FFF !important
+            text-decoration: none
 
     h2, h3
         font-size: 12px
