--- a/src/public/css/style.styl
+++ b/src/public/css/style.styl
@@ -10,14 +10,14 @@ gradient(a, b)
     background: linear-gradient(to bottom, a 0%, b 100%)
 
 corners(a)
-    -webkit-border-radius: a;
-    -moz-border-radius: a;
-    border-radius: a;
+    -webkit-border-radius: a
+    -moz-border-radius: a
+    border-radius: a
 
 shadow(a, b)
-    -webkit-box-shadow: a b;
-    -moz-box-shadow: a b;
-    box-shadow: a b;
+    -webkit-box-shadow: a b
+    -moz-box-shadow: a b
+    box-shadow: a b
 
 
 h1, h2, h3, h4, p
