--- a/src/public/css/style.styl
+++ b/src/public/css/style.styl
@@ -415,6 +415,9 @@ div.row
                 color: #FFF
                 background: #407083
 
+                &.secondary
+                    background: #629591
+
                 a
                     color: #FFF
 
