--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -400,6 +400,9 @@ div.row.bismark aside.sidebar h2 {
   color: #fff;
   background: #407083;
 }
+div.row.bismark aside.sidebar h2.secondary {
+  background: #629591;
+}
 div.row.bismark aside.sidebar h2 a {
   color: #fff;
 }
