fix project siblings

--- a/layouts/projects/index.html
+++ b/layouts/projects/index.html
@@ -9,7 +9,7 @@
   {{ hero.block(title, 'lines') }}
 
   <div class="row rouge">
-    {{ sidebar.block(filter == 'current', projects) }}
+    {{ sidebar.block(filter == 'current', projects, 'Our') }}
 
     <!-- main content -->
     <article class="main nine columns">
