--- a/layouts/hero.html
+++ b/layouts/hero.html
@@ -1,6 +1,6 @@
-{% macro block(title, img) %}
+{% macro block(title, img, light) %}
 <div class="row">
-  <div id="splash" class="twelve columns">
+  <div id="splash" class="twelve columns {% if light %}light{% endif %}">
     <img src="/public/img/splashes/{{ img }}.jpg" />
     <h1>{{ title }}</h1>
   </div>
