--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -27,13 +27,13 @@
       <h2><a target="_blank" href="http://www.cam.ac.uk/">University <span>of</span> Cambridge</a></h2>
       <nav>
         <ul>
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/projects">Projects</a></li>
-          <li><a href="/resources">Resources</a></li>
-          <li><a href="/funding">Funding</a></li>
-          <li><a href="/publications">Publications</a></li>
-          <li><a href="/news">News</a></li>
-          <li><a class="people" href="/people">People</a></li>
+          <li class="{% if url == '/' %}active{% endif %}"><a href="/">Home</a></li>
+          <li class="{% if rel.isFamily('/projects', url) %}active{% endif %}"><a href="/projects">Projects</a></li>
+          <li class="{% if rel.isFamily('/resources', url) %}active{% endif %}"><a href="/resources">Resources</a></li>
+          <li class="{% if rel.isFamily('/funding', url) %}active{% endif %}"><a href="/funding">Funding</a></li>
+          <li class="{% if rel.isFamily('/publications', url) %}active{% endif %}"><a href="/publications">Publications</a></li>
+          <li class="{% if rel.isFamily('/news', url) %}active{% endif %}"><a href="/news">News</a></li>
+          <li class="{% if rel.isFamily('/people', url) %}active{% endif %}"><a class="people" href="/people">People</a></li>
         </ul>
         <a class="contact" href="/contact">Contact</a>
       </nav>
