--- a/layouts/index.html
+++ b/layouts/index.html
@@ -67,15 +67,15 @@
         <h1><a href="/funding">Funding</a></h1>
 
         <ul class="scrollbar">
-          {% for grant in rel.children('/funding') %}
+          {% for grant in rel.children('/funding')|shuffle %}
             <li>
               <div class="row">
                 <div class="nine columns">
                   <h2><a href="{{ grant.url }}">{{ grant.title }}</a></h2>
-                  {{ grant.summary }}
+                  {{ grant.summary|raw }}
                 </div>
                 <div class="three columns">
-                  <img src="{{ grant.summaryImage }}" />
+                  <img src="/public/img/grants-icons/{{ grant.image }}" />
                 </div>
               </div>
             </li>
