individual person pages

--- a/layouts/people/alumni.html
+++ b/layouts/people/alumni.html
@@ -10,7 +10,7 @@
   <div class="row bismark">
     <!-- main content -->
     <article class="main twelve columns">
-      <h1>Past members</h1>
+      <h1>{{ title }}</h1>
 
       <p>Past members include:</p>
       <ul>
